src/objects/IMS_Logs__c.object
<CustomObject>
    <fields>
        <fullName>GUID__c</fullName>
        <description>unique id to track a whole transaction unanimously.</description>
        <label>GUID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Link_to_Record__c</fullName>
        <formula>HYPERLINK(LEFT( $Api.Enterprise_Server_URL_25 , FIND(&apos;/&apos;, $Api.Enterprise_Server_URL_25, 9) ) + Record_Id__c,LEFT( $Api.Enterprise_Server_URL_25 , FIND(&apos;/&apos;, $Api.Enterprise_Server_URL_25, 9) ) + Record_Id__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Link to Record</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Log_Detail__c</fullName>
        <label>Log Detail</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Log_Type__c</fullName>
        <label>Log Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Custom</fullName>
                </value>
                <value>
                    <fullName>Exception</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Other_Details__c</fullName>
        <label>Other Details</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Record_Id__c</fullName>
        <label>Record Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>IMS Logs</label>
    <nameField>
        <label>IMS Logs Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>IMS Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>